Refactor types and functions to avoid circular dependecies.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mimcss",
-	"version": "0.1.4",
+	"version": "0.1.5",
 	"description": "Authoring CSS with TypeScript",
 	"homepage": "https://mmichlin66.github.io/mimcss/mimcssAbout.html",
 	"repository": "github:mmichlin66/mimcss",
@@ -35,11 +35,10 @@
 		"lib/mimcss.js",
 		"lib/mimcss.js.map",
 		"lib/mimcssTypes.d.ts",
-		"lib/styles/utils.d.ts",
-		"lib/styles/colors.d.ts",
+		"lib/styles/UtilTypes.d.ts",
+		"lib/styles/ColorTypes.d.ts",
+		"lib/styles/StyleTypes.d.ts",
 		"lib/styles/tsh.d.ts",
-		"lib/styles/styles.d.ts",
-		"lib/api/Selector.d.ts",
 		"lib/api/rules.d.ts",
 		"lib/api/scope.d.ts",
 		"lib/api/RuleFunctions.d.ts",
