--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mimcss",
-	"version": "0.2.7",
+	"version": "0.2.8",
 	"description": "Authoring CSS in TypeScript",
 	"homepage": "https://mmichlin66.github.io/mimcss/mimcssAbout.html",
 	"repository": "github:mmichlin66/mimcss",
@@ -35,14 +35,16 @@
 		"lib/mimcss.js",
 		"lib/mimcss.js.map",
 		"lib/mimcssTypes.d.ts",
+		
 		"lib/styles/UtilTypes.d.ts",
 		"lib/styles/ColorTypes.d.ts",
 		"lib/styles/StyleTypes.d.ts",
 		"lib/styles/MediaTypes.d.ts",
 		"lib/styles/FontFaceTypes.d.ts",
+		"lib/styles/SelectorTypes.d.ts",
+		"lib/styles/tsh.d.ts",
 		"lib/rules/RuleTypes.d.ts",
-		"lib/scope/ScopeTypes.d.ts",
-		"lib/helpers/SelectorTypes.d.ts",
-		"lib/helpers/tsh.d.ts"
+		"lib/styles/UtilFuncs.d.ts",
+		"lib/rules/StyleScope.d.ts"
 	]
 }
