--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mimcss",
-	"version": "0.2.12",
+	"version": "0.3.1",
 	"description": "Authoring CSS in TypeScript",
 	"homepage": "https://mmichlin66.github.io/mimcss/mimcss-guide-introduction.html",
 	"repository": "github:mmichlin66/mimcss",
@@ -39,6 +39,7 @@
 		"lib/styles/UtilTypes.d.ts",
 		"lib/styles/UtilFuncs.d.ts",
 		"lib/styles/ColorTypes.d.ts",
+		"lib/styles/ColorFuncs.d.ts",
 		"lib/styles/StyleTypes.d.ts",
 		"lib/styles/MediaTypes.d.ts",
 		"lib/styles/FontFaceTypes.d.ts",
