--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mimcss",
-	"version": "0.4.1",
+	"version": "0.4.2",
 	"description": "Authoring CSS in TypeScript",
 	"homepage": "https://mmichlin66.github.io/mimcss/mimcss-guide-introduction.html",
 	"repository": "github:mmichlin66/mimcss",
@@ -43,8 +43,10 @@
 		"lib/styles/MediaTypes.d.ts",
 		"lib/styles/FontFaceTypes.d.ts",
 		"lib/rules/RuleTypes.d.ts",
-		"lib/api/utils.d.ts",
-		"lib/api/rules.d.ts",
-		"lib/api/sh.d.ts"
+		"lib/api/UtilAPI.d.ts",
+		"lib/api/ColorAPI.d.ts",
+		"lib/api/ImageAPI.d.ts",
+		"lib/api/RuleAPI.d.ts",
+		"lib/api/StyleAPI.d.ts"
 	]
 }
