--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
 		"outDir": "./lib/",
 		"sourceMap": true,
 		"noImplicitAny": false,
-		"strictNullChecks": false,
+		"noImplicitReturns": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": false,
+		"strictNullChecks": true,
 		"module": "commonjs",
 		"target": "ES2017",
 		"lib": [ "ES2017", "dom" ],
