--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,25 @@
 {
-	"compileOnSave": true,
 	"compilerOptions":
 	{
+		"composite": true,
 		"declaration": true,
 		"sourceMap": true,
+		"declarationMap": true,
+		"strictNullChecks": true,
 		"noImplicitAny": false,
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": false,
+		"experimentalDecorators": true,
+		"preserveConstEnums": false,
 		"module": "commonjs",
 		"target": "ES2017",
 		"lib": [ "ES2017", "dom" ],
-		"experimentalDecorators": true,
-		"jsx": "react",
-		"preserveConstEnums": false
+		"rootDir": "src",
+		"outDir": "./lib"
 	},
+
+	"include": [
+		"src/**/*"
+	]
 }
