--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mimcss",
-	"version": "0.5.3",
+	"version": "0.5.4",
 	"description": "Authoring CSS in TypeScript",
 	"homepage": "https://mmichlin66.github.io/mimcss/mimcss-guide-introduction.html",
 	"repository": "github:mmichlin66/mimcss",
@@ -18,8 +18,8 @@
 	},
 	"keywords": [
 		"CSS",
-		"Type Script",
-		"Web UI"
+		"CSS in JS",
+		"TypeScript"
 	],
 	"license": "MIT",
 	"devDependencies": {
