--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mimcss",
-	"version": "0.5.6",
+	"version": "0.5.7",
 	"description": "Authoring CSS in TypeScript",
 	"homepage": "https://mmichlin66.github.io/mimcss/guide/mimcss-guide-introduction.html",
 	"repository": "github:mmichlin66/mimcss",
@@ -17,9 +17,10 @@
 		"url": "https://mmichlin66.github.io"
 	},
 	"keywords": [
-		"CSS",
-		"CSS in JS",
-		"TypeScript"
+		"css",
+		"css-in-js",
+		"typescript",
+		"styled-components"
 	],
 	"license": "MIT",
 	"devDependencies": {
