--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mimcss",
-	"version": "0.5.11",
+	"version": "0.6.1",
 	"description": "Authoring CSS in TypeScript",
 	"homepage": "https://mmichlin66.github.io/mimcss/guide/mimcss-guide-introduction.html",
 	"repository": "github:mmichlin66/mimcss",
@@ -47,6 +47,7 @@
 		"lib/api/ColorAPI.d.ts",
 		"lib/api/ImageAPI.d.ts",
 		"lib/api/StyleAPI.d.ts",
-		"lib/api/RuleAPI.d.ts"
+		"lib/api/RuleAPI.d.ts",
+		"lib/api/SchedulingAPI.d.ts"
 	]
 }
