--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "mimcss",
-	"version": "0.6.2",
+	"version": "0.6.3",
 	"description": "Authoring CSS in TypeScript",
 	"homepage": "https://mmichlin66.github.io/mimcss/guide/mimcss-guide-introduction.html",
 	"repository": "github:mmichlin66/mimcss",
@@ -34,6 +34,7 @@
 	"files": [
 		"lib/mimcss.js",
 		"lib/mimcss.js.map",
+		"lib/mimcss.dev.js",
 		"lib/mimcssTypes.d.ts",
 		"lib/styles/UtilTypes.d.ts",
 		"lib/styles/ColorTypes.d.ts",
