Change tsconfig options.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
 		"noUnusedParameters": false,
 		"experimentalDecorators": true,
 		"preserveConstEnums": false,
-		"module": "commonjs",
+        "noEmitOnError": true,
+        "module": "CommonJS",
+        "moduleResolution": "node",
 		"target": "ES2017",
 		"lib": [ "ES2017", "dom" ],
 		"rootDir": "src",
