1) Upgrade version to 0.7.6. 2) Rename mimcssTypes.ts to index.ts. 3) Use ESNext module instead of CommonJS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 		"experimentalDecorators": true,
 		"preserveConstEnums": false,
         "noEmitOnError": true,
-        "module": "CommonJS",
+        "module": "ESNext",
         "moduleResolution": "node",
 		"target": "ES2017",
 		"lib": [ "ES2017", "dom" ],
