--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "mimcss",
-	"version": "0.7.5",
+	"version": "0.7.6",
 	"description": "Authoring CSS in TypeScript",
 	"homepage": "https://mmichlin66.github.io/mimcss/guide/introduction.html",
 	"repository": "github:mmichlin66/mimcss",
 	"main": "./lib/mimcss.js",
 	"module": "./lib/mimcss.js",
-	"types": "./lib/mimcssTypes.d.ts",
+	"types": "./lib/index.d.ts",
 	"scripts": {
 		"build": "tsc -b && webpack",
 		"build-tests": "tsc -b && webpack --config src/test/webpack.config.js",
@@ -35,7 +35,7 @@
 	"files": [
 		"lib/mimcss.js",
 		"lib/mimcss.dev.js",
-		"lib/mimcssTypes.d.ts",
+		"lib/index.d.ts",
 		"lib/styles/UtilTypes.d.ts",
 		"lib/styles/ColorTypes.d.ts",
 		"lib/styles/ImageTypes.d.ts",
