Rearrange Types, API and Func files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 		"experimentalDecorators": true,
 		"preserveConstEnums": false,
         "noEmitOnError": true,
-        "module": "ESNext",
+        "module": "CommonJS",
         "moduleResolution": "node",
 		"target": "ES2017",
 		"lib": [ "ES2017", "dom" ],
