--- a/package.json
+++ b/package.json
@@ -36,18 +36,15 @@
 	"files": [
 		"lib/mimcss.js",
 		"lib/index.d.ts",
-		"lib/styles/UtilTypes.d.ts",
-		"lib/styles/ColorTypes.d.ts",
-		"lib/styles/StyleTypes.d.ts",
-		"lib/styles/SelectorTypes.d.ts",
-		"lib/styles/MediaTypes.d.ts",
-		"lib/styles/FontFaceTypes.d.ts",
-		"lib/rules/RuleTypes.d.ts",
+		"lib/api/BasicTypes.d.ts",
+		"lib/api/StyleTypes.d.ts",
+		"lib/api/RuleTypes.d.ts",
 		"lib/api/UtilAPI.d.ts",
-		"lib/api/ColorAPI.d.ts",
 		"lib/api/ImageAPI.d.ts",
 		"lib/api/StyleAPI.d.ts",
 		"lib/api/RuleAPI.d.ts",
+		"lib/api/MediaAPI.d.ts",
+		"lib/api/FontFaceAPI.d.ts",
 		"lib/api/SchedulingAPI.d.ts"
 	]
 }
