--- a/package.json
+++ b/package.json
@@ -39,9 +39,13 @@
 		"lib/index.d.ts",
 		"lib/api/CoreTypes.d.ts",
 		"lib/api/CoreAPI.d.ts",
-		"lib/api/ExtraTypes.d.ts",
-		"lib/api/ExtraAPI.d.ts",
-		"lib/api/FontFaceTypes.d.ts",
+		"lib/api/NumericTypes.d.ts",
+		"lib/api/NumericAPI.d.ts",
+		"lib/api/ColorTypes.d.ts",
+		"lib/api/ColorAPI.d.ts",
+		"lib/api/FontTypes.d.ts",
+		"lib/api/ShapeTypes.d.ts",
+		"lib/api/ShapeAPI.d.ts",
 		"lib/api/MediaTypes.d.ts",
 		"lib/api/MediaAPI.d.ts",
 		"lib/api/RuleTypes.d.ts",
