--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
 		"lib/api/MediaAPI.d.ts",
 		"lib/api/RuleTypes.d.ts",
 		"lib/api/RuleAPI.d.ts",
+		"lib/api/SchedulingTypes.d.ts",
+		"lib/api/SchedulingAPI.d.ts",
 		"lib/api/StyleTypes.d.ts",
 		"lib/api/StyleAPI.d.ts"
 	]
