--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/jasmine": "^3.8.1",
+		"copy-webpack-plugin": "^9.0.1",
 		"ifdef-loader": "^2.3.0",
 		"source-map-loader": "^3.0.0",
 		"typescript": "^4.3.5",
