--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"strictNullChecks": true,
 		"noImplicitAny": false,
 		"noImplicitReturns": true,
-		"noUnusedLocals": true,
+		"noUnusedLocals": false,
 		"noUnusedParameters": false,
 		"experimentalDecorators": true,
 		"preserveConstEnums": false,
