1. Use ESNEXT instead of ES2017 in tsconfig.joson. 2. More typedoc files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,12 @@
 		"experimentalDecorators": true,
 		"preserveConstEnums": false,
         "noEmitOnError": true,
-        "module": "CommonJS",
+        "useDefineForClassFields": false,
+        "module": "esnext",
         "moduleResolution": "node",
-		"target": "ES2017",
-		"lib": [ "ES2017", "dom" ],
+        "esModuleInterop": true,
+		"target": "esnext",
+		"lib": [ "esnext", "dom" ],
 		"rootDir": "src",
 		"outDir": "./lib"
 	},
