--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "mimcss",
-    "version": "0.11.11",
+    "version": "0.11.12",
     "description": "Authoring CSS in TypeScript",
-    "homepage": "https://mmichlin66.github.io/mimcss/guide/introduction.html",
+    "homepage": "https://mimcss.com",
     "repository": "github:mmichlin66/mimcss",
     "main": "./lib/mimcss.js",
     "module": "./lib/mimcss.js",
@@ -15,7 +15,7 @@
     "author": {
         "name": "Michael Michlin",
         "email": "mmulya@outlook.com",
-        "url": "https://mmichlin66.github.io"
+        "url": "https://mimcss.com"
     },
     "keywords": [
         "css",
