--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "lib/api/SchedulingAPI.d.ts",
         "lib/api/StyleTypes.d.ts",
         "lib/api/Stylesets.d.ts",
-        "lib/api/StyleAPI.d.ts"
+        "lib/api/StyleAPI.d.ts",
+        "lib/api/Virt.d.ts"
     ]
 }
