--- a/web/demo/playground-config.json
+++ b/web/demo/playground-config.json
@@ -23,7 +23,8 @@
                 "api/SchedulingAPI.d.ts",
                 "api/StyleTypes.d.ts",
                 "api/Stylesets.d.ts",
-                "api/StyleAPI.d.ts"
+                "api/StyleAPI.d.ts",
+                "api/Virt.d.ts"
             ],
             "rootPath": "types/mimcss/"
         },
