Add ScrollTimelineTypes.d.ts to playground-config.json.

--- a/web/demo/playground-config.json
+++ b/web/demo/playground-config.json
@@ -21,6 +21,7 @@
                 "api/RuleAPI.d.ts",
                 "api/SchedulingTypes.d.ts",
                 "api/SchedulingAPI.d.ts",
+                "api/ScrollTimelineTypes.d.ts",
                 "api/StyleTypes.d.ts",
                 "api/Stylesets.d.ts",
                 "api/StyleAPI.d.ts"
