Allow changing and suppressing default units when converting numbers to strings.

--- a/web/demo/playground-config.json
+++ b/web/demo/playground-config.json
@@ -46,6 +46,7 @@
                 "api/ElementTypes.d.ts",
                 "api/HtmlTypes.d.ts",
                 "api/SvgTypes.d.ts",
+                "api/MathmlTypes.d.ts",
                 "jsx/mim.d.ts"
             ],
             "rootPath": "types/mimbl/"
