--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "module": "./lib/mimcss.js",
     "types": "./lib/index.d.ts",
     "scripts": {
-        "build": "tsc -b && webpack",
-        "build-tests": "tsc -b && webpack --config src/test/webpack.config.js",
-        "typedoc": "typedoc"
+        "build": "npx tsc -b && webpack",
+        "build-tests": "npx tsc -b && webpack --config src/test/webpack.config.js",
+        "typedoc": "npx typedoc"
     },
     "author": {
         "name": "Michael Michlin",
@@ -29,6 +29,7 @@
         "copy-webpack-plugin": "^11.0.0",
         "ifdef-loader": "^2.3.2",
         "source-map-loader": "^4.0.1",
+        "typedoc": "^0.23.24",
         "typescript": "^4.9.4",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1"
